--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "online-resume",
-  "version": "0.0.0",
+  "version": "1.1.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,8 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "set-docker-version": "$ORVERSION=",
-    "build-docker": "docker login; docker build -t online-resume:$ORVERSION .;docker tag online-resume:$ORVERSION jakaranga/oneline-resume:$ORVERSION;docker push jakaranga/online-resume:$ORVERSION"
+    "build-docker": "docker login; docker build -t online-resume:1.1.2 .;docker tag online-resume:1.1.2 jakaranga/online-resume:1.1.2;docker push jakaranga/online-resume:1.1.2"
   },
   "private": true,
   "dependencies": {
