--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.3",
-    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/angular-fontawesome": "0.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0"
   },
